# crane_x7_mpc

./: .gitignore  README.md
crane_x7_control/config/: crane_x7_control.yaml  crane_x7_fake_control.yaml  crane_x7_gazebo_control.yaml  crane_x7_gazebo_mpc.yaml
crane_x7_control/include/crane_x7_control/: dxlport_control.h
crane_x7_control/launch/: crane_x7_control.launch  crane_x7_fake_control.launch  crane_x7_mpc_gazebo.launch
crane_x7_control/src/: control_setting.cpp  hardware.cpp
crane_x7_description/launch/: display.launch
crane_x7_description/urdf/: crane_x7_arm.xacro  crane_x7_for_mpc.urdf
crane_x7_gazebo/launch/: crane_x7.launch  crane_x7_with_table.launch
crane_x7_gazebo/worlds/: table.world
crane_x7_mpc/: CMakeLists.txt  controller_description.xml  nodelet_description.xml  package.xml  ~CMakeLists.txt  ~package.xml
crane_x7_mpc/config/: crane_x7_mpc.yaml
crane_x7_mpc/include/crane_x7_mpc/: mpc.hpp  mpc_controller.hpp  mpc_node.hpp  mpc_nodelet.hpp
crane_x7_mpc/msg/: ControlInputPolicy.msg
crane_x7_mpc/src/: mpc.cpp  mpc_controller.cpp  mpc_node.cpp  mpc_nodelet.cpp
crane_x7_mpc/srv/: SetGoalConfiguration.srv
crane_x7_msgs/: CMakeLists.txt  package.xml
crane_x7_msgs/msg/: ControlInputPolicy.msg  JointPositionCommand.msg
crane_x7_state_feedback_controller/: CMakeLists.txt  controller_description.xml  package.xml
crane_x7_state_feedback_controller/include/crane_x7_state_feedback_controller/: state_feedback_controller.hpp
crane_x7_state_feedback_controller/src/: state_feedback_controller.cpp
