<?xml version="1.0"?>
<package>
  <name>crane_x7_mpc</name>
  <version>0.1.0</version>
  <description>Simple example of ROS nodelet</description>

  <maintainer email="cryborg21@gmail.com">cryborg21</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>controller_interface</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_description.xml" />
    <controller_interface plugin="${prefix}/controller_description.xml" />
  </export>
</package>
