<?xml version="1.0"?>
<package format="2">
  <name>crane_x7_state_feedback_controller</name>
  <version>0.0.0</version>
  <description>The crane_x7_state_feedback_controller package</description>

  <maintainer email="katayama.25w@st.kyoto-u.ac.jp">Sotaro Katayama</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>crane_x7_msgs</build_depend>
  <build_export_depend>controller_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>crane_x7_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/controller_description.xml" />
  </export>
</package>
